First DW Commit

--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -16,5 +16,6 @@
 </nav>
 	<h1> This is the Digital Design Page</h1>
 <a href="DDPages/Lab1.html">Lab1 Basic HTML tags</a><br>
+<a href="DDPages/Lab3.html">Lab3 Hpyerlinks</a><br>
 </body>
 </html>
