--- a/DDPages/Lab1.html
+++ b/DDPages/Lab1.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<a href="DigitalDesign.html">Back to Digital Design</a>
 <h1> All about Ana Castillo</h1>
       <br>
 	<p> Hi, my name is Ana and I am a high school student. I am now in 12th grade, and I am now a senior!</p>
