--- a/DDPages/Lab3.html
+++ b/DDPages/Lab3.html
@@ -10,7 +10,7 @@
 <p><a href= "https://marvelcinematicuniverse.fandom.com/wiki/Loki"> Loki God of Mischief </a></p>
 <p><a href= "https://attackontitan.fandom.com/wiki/Hange_Zo%C3%AB"> Hanji Zoe from AOT </a></p>
 	<p><a href="https://kakegurui.fandom.com/wiki/Midari_Ikishima">Midari Ikishima from Kakegurui</a></p>
-	<h2> <em> Special Hyperlinks</em></h2>
+	<h2> <em> Special Hyperlinks-Multipage Site</em></h2>
 	<p><a href = "mailto:Hetalia@WorldStars.com"> Email us about Hetalia </a></p>
 	<p><a href = "tel:18002386890"> Customer Support questions</a></p>
 	</body>
