--- a/DDPages/Lab4.html
+++ b/DDPages/Lab4.html
@@ -3,6 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <title>Lab 4: Lists</title>
+<style type="text/css">
+body {
+    background-color: #E5972A;
+}
+</style>
 </head>
 <body>
 <h1> Recipe for Pan de Muerto (Mexican Bread of the Dead) </h1>
