--- a/DDPages/Lab2.html
+++ b/DDPages/Lab2.html
@@ -3,12 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>Lab 2:Images</title>
+<style type="text/css">
+body {
+    background-color: #1ECDBB;
+}
+</style>
 </head>
 <h2><em>Images that are different sizes: Taken from my multipage website assignment</em></h2>
 <body>
 <img src="../91jroMwXl6L._SLDPMOBCAROUSELAUTOCROP288221_MCnd_AC_SR462,693_.jpg" width="250" height="250" alt=""/><br>
 <img src="../Nendoroid-1088-USA-pose4.jpg" width="100" height="150" alt=""/><br>
 <img src="../51dIOshVwyL._AC_SY400_.jpg" width="271" height="400" alt=""/><br>
-	
+<img src="../391368061d536421eb87b2b4a76fd0f953fb7a44_original.jpeg" width="600" height="600" alt=""/>
 </body>
 </html>
