--- a/DDPages/Lab3.html
+++ b/DDPages/Lab3.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+	<a href="DigitalDesign.html">Back to Digital Design</a>
 	<h2> <em>My favorite characters are...</em></h2>
 <p><a href= "https://marvelcinematicuniverse.fandom.com/wiki/Loki"> Loki God of Mischief </a></p>
 <p><a href= "https://attackontitan.fandom.com/wiki/Hange_Zo%C3%AB"> Hanji Zoe from AOT </a></p>
