--- a/DDPages/Lab4.html
+++ b/DDPages/Lab4.html
@@ -10,6 +10,7 @@ body {
 </style>
 </head>
 <body>
+	<a href="DigitalDesign.html">Back to Digital Design</a>
 <h1> Recipe for Pan de Muerto (Mexican Bread of the Dead) </h1>
 <img src="../8E2BC13F-1EAC-4BB4-A632-8A066033B03C.jpg" width="667" height="629" alt=""/><br>
 	<h4>Ingredients</h4>
