--- a/DDPages/Lab5.html
+++ b/DDPages/Lab5.html
@@ -2,9 +2,24 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Lab 5: Inline Style</title>
+<style type="text/css">
+body {
+    background-color: #6B9FDE;
+}
+
+h1,h2,h3,h4,h5,h6 {
+    font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
+}
+body,td,th {
+    color: #CC3538;
+}
+</style>
 </head>
 
 <body>
-</body>
+	<a href="DigitalDesign.html">Back to Digital Design</a><br>
+<h1><center>Killer Whales</center></h1>
+<center><img src="../Senses-calf-AC53R_600x410.jpg" width="600" height="410" alt=""/></center>
+</body> 
 </html>
