--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -15,7 +15,10 @@
 	
 </nav>
 	<h1> This is the Digital Design Page</h1>
-<a href="DDPages/Lab1.html">Lab1 Basic HTML tags</a><br>
-<a href="DDPages/Lab3.html">Lab3 Hpyerlinks</a><br>
+<a href="DDPages/Lab1.html">Lab 1 Basic HTML tags</a><br>
+<a href="DDPages/Lab2.html">Lab 2 HTML Images</a><br>
+<a href="DDPages/Lab3.html">Lab 3 Hpyerlinks</a><br>
+<a href="DDPages/Lab4.html">Lab 4 Lists</a><br>
+<a href="DDPages/Lab5.html">Lab 5 Inline Style</a><br>
 </body>
 </html>
