--- a/DDPages/Lab2.html
+++ b/DDPages/Lab2.html
@@ -11,6 +11,7 @@ body {
 </head>
 <h2><em>Images that are different sizes: Taken from my multipage website assignment</em></h2>
 <body>
+	<a href="DigitalDesign.html">Back to Digital Design</a><br>
 <img src="../91jroMwXl6L._SLDPMOBCAROUSELAUTOCROP288221_MCnd_AC_SR462,693_.jpg" width="250" height="250" alt=""/><br>
 <img src="../Nendoroid-1088-USA-pose4.jpg" width="100" height="150" alt=""/><br>
 <img src="../51dIOshVwyL._AC_SY400_.jpg" width="271" height="400" alt=""/><br>
