--- a/DDPages/Lab5.html
+++ b/DDPages/Lab5.html
@@ -12,13 +12,14 @@ h1,h2,h3,h4,h5,h6 {
     font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
 }
 body,td,th {
-    color: #CC3538;
+    color: #2CDBFF;
 }
 </style>
 </head>
 
 <body>
 	<a href="DigitalDesign.html">Back to Digital Design</a><br>
+	<h2><em>Adding Background Color, Font Color, etc..</em></h2>
 <h1><center>Killer Whales</center></h1>
 <center><img src="../Senses-calf-AC53R_600x410.jpg" width="600" height="410" alt=""/></center>
 </body> 
