--- a/DDPages/Lab6.html
+++ b/DDPages/Lab6.html
@@ -7,9 +7,10 @@
 
 <body>
 	<a href="DigitalDesign.html">Back to Digital Design</a><br>
-	<h1><em>Adding Video links</h1></em>
+	<h1><em>Adding Video Links</em></h1>
 	<h3>Hamster Video</h3>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/vacB1dMiJkw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+<br>
+	
 </body>
 </html>
