--- a/DDPages/Lab6.html
+++ b/DDPages/Lab6.html
@@ -11,6 +11,9 @@
 	<h3>Hamster Video</h3>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/vacB1dMiJkw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>
-	
+	<h3>Animal Crossing Videos</h3>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/FK8JdmLTMGA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<br>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/FMNTGOdTBu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
