--- a/DDPages/Lab1.html
+++ b/DDPages/Lab1.html
@@ -8,7 +8,7 @@
 
 <body>
 	<a href="DigitalDesign.html">Back to Digital Design</a>
-<h1> All about Ana Castillo</h1>
+<h1> Basic HTML: All about Ana Castillo</h1>
       <br>
 	<p> Hi, my name is Ana and I am a high school student. I am now in 12th grade, and I am now a senior!</p>
       <br>
