Digital Design Homepage update

--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -13,6 +13,7 @@
 	<a href = "VisualDesign.html">Visual Design</a><br>
 	<a href = "AboutMe.html">About Me</a><br>
 	
+	
 </nav>
 	<h1> This is the Digital Design Page</h1>
 <a href="DDPages/Lab1.html">Lab 1 Basic HTML tags</a><br>
@@ -20,5 +21,7 @@
 <a href="DDPages/Lab3.html">Lab 3 Hpyerlinks</a><br>
 <a href="DDPages/Lab4.html">Lab 4 Lists</a><br>
 <a href="DDPages/Lab5.html">Lab 5 Inline Style</a><br>
+<a href="DDPages/Lab6.html">Lab 6 Adding Video Links</a><br>
+<a href="DDPages/Lab7.html">Lab 7 Holiday Project</a><br>
 </body>
 </html>
