--- a/VisualDesign.html
+++ b/VisualDesign.html
@@ -7,11 +7,11 @@
 
 <body>
 	<nav>
-	<a href = "index.html">Home Page</a> <br>
-	<a href = "WCP.html">WCP</a><br>
-	<a href = "DigitalDesign.html">Digital Design</a><br>
-	<a href = "VisualDesign.html">Visual Design</a><br>
-	<a href = "AboutMe.html">About Me</a>
+	<a href = "VDPages/VDPages/index.html">Home Page</a> <br>
+	<a href = "VDPages/VDPages/WCP.html">WCP</a><br>
+	<a href = "VDPages/VDPages/DigitalDesign.html">Digital Design</a><br>
+	<a href = "VDPages/VisualDesign.html">Visual Design</a><br>
+	<a href = "VDPages/VDPages/AboutMe.html">About Me</a>
 </nav>
 	
 	<h1> This is the Visual Design Page</h1>
