--- a/CSSPages/Lab7page1.html
+++ b/CSSPages/Lab7page1.html
@@ -14,7 +14,7 @@
   <br>
   <br>
 
-	<h3>Question 1: How many summer days does Phineas & Ferb have before school starts in the fall just to end it? And what is the anual problem for our generation? </h3>
+	<h3>Question 1: How many summer days does Phineas and Ferb have before school starts in the fall just to end it? And what is the anual problem for our generation? </h3>
 
 	<div class = "wrong">99, issues</div>  <div class = "correct">104, finding a good way to spend it</div> 
   <div class = "wrong">76, summer school</div> <div class = "wrong">52, phone addiction</div>
@@ -36,7 +36,7 @@
  <br>
  <br>
 
- <h3> Question 4: When did Phineas & Ferb finally get busted by their mom? *Candance scremas in joy* </h3>
+ <h3> Question 4: When did Phineas and Ferb finally get busted by their mom? *Candance scremas in joy* </h3>
 <div class = "wrong">Season 2, Episode 17, 2009</div>  <div class = "wrong">Season 3, Episode 6, 2011</div> 
   <div class = "correct">Season 1, Episode 45, 2009</div> <div class = "wrong"> Season 4, Episode 30, 2012</div>
 
