CSS Lab Updates

--- a/CSSPages/CSSLab1.html
+++ b/CSSPages/CSSLab1.html
@@ -2,9 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Acrostic Poem</title>
 </head>
 
 <body>
+	<style> 
+          /*Write your CSS code here*/
+      /* Use CSS Elementor Selector on Span */
+    span{
+      color:pink;
+      font-size:50px;
+      font-family: "Indie Flower",cursive;
+    }
+
+    </style>
+	<div>
+<p><span>A</span> dventurous</p>
+<p><span>N</span>atural   </p>
+<p><span>A</span>mazing   </p>
+
+</div>
 </body>
 </html>
