--- a/CSSPages/CSSLab3.html
+++ b/CSSPages/CSSLab3.html
@@ -6,5 +6,42 @@
 </head>
 
 <body>
+<style> 
+          /*Write your CSS code here*/
+
+    img{
+      height:110px;
+      width:110px;
+    }
+
+    .rounded{
+      border-radius:25px;
+    }
+
+    .circle {
+      border-radius: 60px;
+    }
+
+    
+    </style>
+
+  <body>
+   <!--Write your HTML code here -->
+
+<h3> My favorite desserts</h3>
+<img src="../Black-Forest-Cake-Recipe.jpg" width="680" height="452" alt="Black Forest cake"/>
+<img src="../Dorayaki-New-500x400.jpg" width="500" height="400" alt="Dorayaki"/>
+<img src="../Gelatina-de-mosaico-5.jpg" width="754" height="586" alt="Gelatina"/>
+<h3> Same pics with rounded corners</h3>
+<img class="rounded" src="../Gelatina-de-mosaico-5.jpg" alt="Gelatina">
+<img class="rounded" src="../Black-Forest-Cake-Recipe.jpg" alt="Black Forest Cake">
+<img class="rounded" src="../Dorayaki-New-500x400.jpg" alt="Dorayaki">
+
+<h3>Same pics but they are circles </h3>
+<img class="circle" src="../Gelatina-de-mosaico-5.jpg" alt="Gelatina">
+<img class="circle" src="../Black-Forest-Cake-Recipe.jpg" alt="Black Forest Cake">
+<img class="circle" src="../Dorayaki-New-500x400.jpg" alt="Dorayaki">
+     
+	</body>
 </body>
 </html>
