CSS Labs updates and Home Page update

--- a/CSSPages/ CSSLab7.html
+++ b/CSSPages/ CSSLab7.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Lab 7:Popualr Disney Show Quizzies!</title>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
 
 </head>
 
 <body>
+	<a href="DigitalDesign.html">Back to Digital Design</a>
 	<h1 style="text-align:center;"> Welcome to our Disney Show Trivia!</h1>
   <center> 
     <img src="../DisneyPR.jpg" width="350" height="200" alt=""/></center>
