--- a/CSSPages/CSSLab2.html
+++ b/CSSPages/CSSLab2.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Lab 2:CSS Selectors</title>
 </head>
 
 <body>
+	<a href="DigitalDesign.html">Back to Digital Design</a>
 	<style> /*Write your CSS code here*/
     
    
