--- a/CSSPages/CSSLab1.html
+++ b/CSSPages/CSSLab1.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+	<a href="DigitalDesign.html">Back to Digital Design</a>
 	<style> 
           /*Write your CSS code here*/
       /* Use CSS Elementor Selector on Span */
