--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -23,5 +23,13 @@
 <a href="DDPages/Lab5.html">Lab 5 Inline Style</a><br>
 <a href="DDPages/Lab6.html">Lab 6 Adding Video Links</a><br>
 <a href="DDPages/Lab7.html">Lab 7 Holiday Project</a><br>
+	<br><h1>CSS Labs</h1>
+<a href="CSSPages/CSSLab1.html">CSS Lab 1 Basic CSS</a><br>
+<a href="CSSPages/CSSLab2.html">CSS Lab 2 CSS Selectors</a><br>
+<a href="CSSPages/CSSLab3.html">CSS Lab 3 CSS Borders</a><br>
+<a href="CSSPages/CSSLab4.html">CSS Lab 4 CSS Background Images</a><br>
+<a href="CSSPages/CSSLab5.html">CSS Lab 5 CSS Click Hover</a><br>
+<a href="CSSPages/CSSLab6.html">CSS Transitions</a><br>
+<a href="CSSPages/CSSLab7.html">CSS External Sheets</a><br>
 </body>
 </html>
