--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -29,7 +29,7 @@
 <a href="CSSPages/CSSLab3.html">CSS Lab 3 CSS Borders</a><br>
 <a href="CSSPages/CSSLab4.html">CSS Lab 4 CSS Background Images</a><br>
 <a href="CSSPages/CSSLab5.html">CSS Lab 5 CSS Click Hover</a><br>
-<a href="CSSPages/CSSLab6.html">CSS Transitions</a><br>
-<a href="CSSPages/CSSLab7.html">CSS External Sheets</a><br>
+<a href="CSSPages/CSSLab6.html">CSS Lab 6 Transitions</a><br>
+<a href="CSSPages/CSSLab7.html">CSS Lab 7 External Sheets</a><br>
 </body>
 </html>
