--- a/CSSPages/ CSSLab7.html
+++ b/CSSPages/ CSSLab7.html
@@ -23,16 +23,16 @@
    <br>
   <a href = "Lab7page2.html"> Gravity Falls </a>
    <br>
-  <img src="../71NVWnaJftL._AC_SL1000_.jpg" width="300" height="250" alt=""/><br>
+  <img src="../71NVWnaJftL._AC_SL1000_.jpg" width="300" height="250" alt="Gravity Fall Pic"/><br>
   <br>
   <br>
   <a href = "Lab7page3.html"> Jessie </a>
   <br>
-  <img src="../v1.jpg" width="206" height="305" alt=""/><br>
+  <img src="../v1.jpg" width="206" height="305" alt="Jessie Pic"/><br>
   <br>
   <br>
   <a href = "Lab7page4.html">Wizards of Waverly Place</a>
   <br>
-<img src="../wizards_place.jpeg" width="300" height="250" alt=""/>
+<img src="../wizards_place.jpeg" width="300" height="250" alt="Wizards of Waverly Place"/>
 </body>
 </html>
