CSS Lab 7 update

--- a/CSSPages/ CSSLab7.html
+++ b/CSSPages/ CSSLab7.html
@@ -4,11 +4,11 @@
 <meta charset="UTF-8">
 <title>Lab 7:Popualr Disney Show Quizzies!</title>
 	<link href="style.css" rel="stylesheet" type="text/css"/>
+	<a href="DigitalDesign.html">Back to Digital Design</a>
 </head>
 
-<body>
-
-	<h1 style="text-align:center;"> Welcome to our Disney Show Trivia!</h1>
+<body
+	<h1 style="text-align:center;"><h1>Welcome to our Disney Show Trivia!</h1>
   <center> 
     <img src="../DisneyPR.jpg" width="350" height="200" alt=""/></center>
     <h2 style="text-align:center;"> Made by: Jocelyn, Samantha, Kylie and Ana :D </h2> 
