DD Homepage update

--- a/DigitalDesign.html
+++ b/DigitalDesign.html
@@ -30,5 +30,6 @@
 <a href="CSSPages/CSSLab4.html">CSS Lab 4 CSS Background Images</a><br>
 <a href="CSSPages/CSSLab5.html">CSS Lab 5 CSS Click Hover</a><br>
 <a href="CSSPages/CSSLab6.html">CSS Lab 6 Transitions</a><br>
+<a href="CSSPages/ CSSLab7.html">CSS Lab 7 External Sheets</a><br>
 </body>
 </html>
